--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -95,7 +95,7 @@
         <div class="footer-container">
             <p class="ready">Ready for clear vision? <a href="/contactUs.html" class="cta-button book btn" >Book Appointment</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a> +234 8552646574</p>
+            <p class="wills-address">📍New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a></p>
         </div>
     </footer>
 </body>
