--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will's-Book</title>
     <link rel="stylesheet" href="/styles/contactUs.css">
-    <link rel="shortcut icon" href="assets/will's-logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/wills-logo.jpg" type="image/x-icon">
 </head>
 <body>
 
