--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will's Eye Clinic</title>
-    <link rel="icon" type="image/x-icon" href="/assets/will's-logo.jpg">
+    <link rel="icon" type="image/x-icon" href="/assets/wills-logo.jpg">
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
