--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -480,7 +480,7 @@
                flex-wrap: wrap;
             }
 
-             .cta-button{
+             .book{
                 font-weight: lighter;
             }
         }
