--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will's-Book</title>
-    <link rel="stylesheet" href="/styles/contactUs.css">
+    <link rel="stylesheet" href="/styles/contactus.css">
     <link rel="shortcut icon" href="/assets/wills-logo.jpg" type="image/x-icon">
 </head>
 <body>
@@ -93,7 +93,7 @@
  <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="/contactUs.html" class="cta-button book btn" >Book Appointment</a></p>
+            <p class="ready">Ready for clear vision? <a href="/contactus.html" class="cta-button book btn" >Book Appointment</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
             <p class="wills-address">📍New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a></p>
         </div>
