--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -30,7 +30,7 @@
         <div class="contact-form-container">
             <h2>Send Us a Message</h2>
 
-    <form action="/contactUs" class="contact-form" method="post" enctype="application/x-www-form-urlencoded">
+    <form action="/contactus" class="contact-form" method="post" enctype="application/x-www-form-urlencoded">
         <div class="form-group">
                     <label for="fullName">Full Name</label>
                     <input type="text" id="fullName" name="fullName" placeholder="Your full name" required>
@@ -93,9 +93,9 @@
  <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="/contactus.html" class="cta-button book btn" >Book Appointment</a></p>
+            <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book btn" >Book Appointment</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a></p>
+            <p class="wills-address">📍New Haven, Enugu State | <a href="/contactus">Contact Us</a></p>
         </div>
     </footer>
 </body>
