--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
             <nav class="nav-links">
                 <a href="#about">About Us</a>
                 <a href="#services">Services</a>
-                <a href="/contactUs" class="cta-button book">Book Appointment</a>
+                <a href="/contactus" class="cta-button book">Book Appointment</a>
             </nav>
         </div>
     </header>
