vercel issue fix

--- a/views/index.html
+++ b/views/index.html
@@ -329,7 +329,7 @@
         <div class="footer-container">
             <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book" >Book Appointment</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State | <a href="/contactUs">Contact Us</a></p>
+            <p class="wills-address">📍New Haven, Enugu State | <a href="/contactus">Contact Us</a></p>
         </div>
     </footer>
 </body>
