--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -440,7 +440,7 @@
             }
 
              .book{
-                font-weight: lighter;
+                font-weight: 400;
             }
         }
         
@@ -480,12 +480,20 @@
                flex-wrap: wrap;
             }
 
+           .book{
+                font-weight: lighter;
+                display: block;
+                max-width: 180px;
+               text-align: center;
+              align-items: center;
+              margin: .5rem auto !important;
+            }
              
         }
 
         @media (max-width: 412px) {
           .book{
-                font-weight: lighter;
+                font-weight: 400;
                 display: block;
                 max-width: 180px;
                text-align: center;
