--- a/views/index.html
+++ b/views/index.html
@@ -140,16 +140,16 @@
                 <h2 class="team-title">Meet Our Caring Team</h2>
                 <div class="team-scroll-container">
 
-                 <!-- Team Member 3 -->
+                 <!-- Team Member 1 -->
                     <div class="team-member">
-                        <img src="/assets/Dr-iyke.jpg" alt="Dr Iyke">
+                        <img src="/assets/Dr-Iyke.jpg" alt="Dr Iyke">
                         <h4>Dr. Ikechukwu</h4>
                         <p class="role">Chief Optician</p>
                         <p class="job-desc">Helps patients select the perfect frames and lens technology.</p>
                     </div>
 
 
-                    <!-- Team Member 1 -->
+                    <!-- Team Member 2 -->
                     <div class="team-member">
                         <img src="/assets/Chief-Optometrist.jpg" alt="Dr. Catherine">
                         <h4>Dr. Catherine. Ejinkeonye. OD, MNOA</h4>
@@ -157,7 +157,7 @@
                         <!-- <p class="job-desc">Specializes in pediatric vision and digital eye strain.</p> -->
                     </div>
 
-                    <!-- Team Member 2 -->
+                    <!-- Team Member 3 -->
                     <div class="team-member">
                         <img src="/assets/Admin-Manager.jpg" alt="Udeh Uchechukwu">
                         <h4>Udeh Uchechukwu</h4>
