--- a/views/index.html
+++ b/views/index.html
@@ -142,18 +142,18 @@
 
                  <!-- Team Member 1 -->
                     <div class="team-member">
-                        <img src="/assets/Dr-Iyke.jpg" alt="Dr Iyke">
-                        <h4>Dr. Ikechukwu</h4>
-                        <p class="role">Chief Optician</p>
-                        <p class="job-desc">Helps patients select the perfect frames and lens technology.</p>
+                        <img src="/assets/Dr-Iyke.jpg" alt="Ikenna ejinkeonye">
+                        <h4>Ikenna Ejinkeonye</h4>
+                        <p class="role">Ophthalmic Assistant & Ocularist</p>
+                        <!-- <p class="job-desc">Helps patients select the perfect frames and lens technology.</p> -->
                     </div>
 
 
                     <!-- Team Member 2 -->
                     <div class="team-member">
-                        <img src="/assets/Chief-Optometrist.jpg" alt="Dr. Catherine">
-                        <h4>Dr. Catherine. Ejinkeonye. OD, MNOA</h4>
-                        <p class="role">Chief Optometrist</p>
+                        <img src="/assets/Chief-Optometrist.jpg" alt="Catherine">
+                        <h4>Catherine. Ejinkeonye. OD, MNOA</h4>
+                        <p class="role">Optometrist</p>
                         <!-- <p class="job-desc">Specializes in pediatric vision and digital eye strain.</p> -->
                     </div>
 
@@ -215,7 +215,7 @@
                 <hr>
                 
                 <div class="gallery-container">
-                    <span class="gallery-title">Optical Gallery: Frames & Equipments</span>
+                    <span class="gallery-title">Our Gallery</span>
                     <p>
                         Glance through our curated collection of high-quality frames, and Patient Care Examination Equipments.
                     </p>
@@ -228,7 +228,7 @@
                         <img src="/assets/optical-gallery-3.jpeg" alt="Classic Aviator Frames">
                         <div class="gallery-caption">
                             <strong>Frame Display</strong>
-                            <span>Plastic Frames</span>
+                            <!-- <span>Plastic Frames</span> -->
                         </div>
                     </div>
 
@@ -236,7 +236,7 @@
                         <img src="/assets/special-googles.jpeg" alt="Classic Aviator Frames">
                         <div class="gallery-caption">
                             <strong>Trial Tools</strong>
-                            <span>Trials Tools</span>
+                            <!-- <span>Trials Tools</span> -->
                         </div>
                     </div>
 
@@ -244,7 +244,7 @@
                         <img src="/assets/optical-gallery-1.jpeg" alt="optical-gallery-1">
                         <div class="gallery-caption">
                             <strong>Frame Display</strong>
-                            <span>Frame Display</span>
+                            <!-- <span>Frame Display</span> -->
                         </div>
                     </div>
 
@@ -253,7 +253,7 @@
                         <img src="/assets/workspace-1.jpeg" alt="workspace-1">
                         <div class="gallery-caption">
                             <strong>Office Reception</strong>
-                            <span>Clinic Reception</span>
+                            <!-- <span>Clinic Reception</span> -->
                         </div>
                     </div>
 
@@ -262,21 +262,21 @@
                         <img src="/assets/optical-gallery-6.jpeg" alt="optical-gallery">
                         <div class="gallery-caption">
                             <strong>Optical Frames</strong>
-                            <span>Optical Frames</span>
+                            <!-- <span>Optical Frames</span> -->
                         </div>
                     </div>
                     <div class="gallery-item">
                         <img src="/assets/med-equipment-1.jpg" alt="medical-equipment">
                         <div class="gallery-caption">
                             <strong>Exam Equipment</strong>
-                            <span>Optical Exam Equipment</span>
+                            <!-- <span>Optical Exam Equipment</span> -->
                         </div>
                     </div>
                     <div class="gallery-item">
                         <img src="/assets/med-equipment-2.jpg" alt="medical-equipment">
                         <div class="gallery-caption">
                             <strong>Exam Equipment</strong>
-                            <span>Optical Exam Equipment</span>
+                            <!-- <span>Optical Exam Equipment</span> -->
                         </div>
                     </div>
 
@@ -284,31 +284,32 @@
                         <img src="/assets/special-glasses.jpeg" alt="special-glasses">
                         <div class="gallery-caption">
                             <strong>Frame Display</strong>
-                            <span>Frame Display</span>
+                            <!-- <span>Frame Display</span> -->
                         </div>
                     </div>
 
                     <div class="gallery-item">
                         <img src="/assets/googles-1.jpg" alt="googles-1">
                         <div class="gallery-caption">
-                            <strong>Eye Gear</strong>
-                            <span>Eye Protective Gear</span>
+                            <strong>Eye Protective Gear</strong>
+                            <!-- <span>Eye Protective Gear</span> -->
                         </div>
                     </div>
 
                     <div class="gallery-item">
                         <img src="/assets/googles-2.jpg" alt="optical-googles-2">
                         <div class="gallery-caption">
-                            <strong>Eye Gear</strong>
-                            <span>Eye Protective Gear</span>
+                            <strong>Eye Protective Gear</strong>
+                            <!-- <span>Eye Protective Gear</span> -->
                         </div>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="/assets/optical-googles.jpeg" alt="optical-googles">
+                        <!-- <img src="/assets/low-vision-2.jpg" alt="optical-googles"> -->
+                        <img src="/assets/low-vision.jpg" alt="optical-googles">
                         <div class="gallery-caption">
-                            <strong>Optical Googles</strong>
-                            <span>Special Optical googles</span>
+                            <strong>Octal - Low Vision Services</strong>
+                            <!-- <span>Special Optical googles</span> -->
                         </div>
                     </div>
 
@@ -317,7 +318,7 @@
                         <img src="/assets/optical gallery-4.jpeg" alt="optical gallery-4">
                         <div class="gallery-caption">
                             <strong>Frame Display</strong>
-                            <span>Frame Display</span>
+                            <!-- <span>Frame Display</span> -->
                         </div>
                     </div>
                 </div>
@@ -331,7 +332,7 @@
         <div class="footer-container">
             <p class="ready">Ready for clear vision? <a href="/contactus.html" class="cta-button book" >Book Exam</a></p>
             <p class="wills-desc">&copy;<span id="year"></span> Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State |<a href="/contactus.html">Contact Us</a></p>
+            <p class="wills-address">18 Udenweze Street, New Haven, Enugu State |<a href="/contactus.html">Contact Us</a></p>
         </div>
     </footer>
 
