--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,7 @@
                     <!-- Team Member 2 -->
                     <div class="team-member">
                         <img src="/assets/Chief-Optometrist.jpg" alt="Catherine">
-                        <h4>Catherine. Ejinkeonye. OD, MNOA</h4>
+                        <h4>Catherine Ejinkeonye. <br> OD, MNOA</h4>
                         <p class="role">Optometrist</p>
                         <!-- <p class="job-desc">Specializes in pediatric vision and digital eye strain.</p> -->
                     </div>
@@ -171,7 +171,7 @@
                         <img src="/assets/receptionist.jpg" alt="Alexandra">
                         <h4>Nwajiobi Alexandra</h4>
                         <p class="role">Desk person & Receptionist</p>
-                        <p class="job-desc">Patient reception, booking and other administrative duties.</p>
+                        <!-- <p class="job-desc">Patient reception, booking and other administrative duties.</p> -->
                     </div>
                 </div>
             </div>
