--- a/views/contactUs.html
+++ b/views/contactUs.html
@@ -15,7 +15,7 @@
             <nav class="nav-links">
                 <a href="/">About Us</a>
                 <a href="/">Services</a>
-                <a href="#" class="cta-button book">Book Appointment</a>
+                <a href="#" class="cta-button book">Book Exam</a>
             </nav>
         </div>
     </header>
@@ -92,7 +92,7 @@
  <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="#" class="cta-button book btn" >Book AExam</a></p>
+            <p class="ready">Ready for clear vision? <a href="#" class="cta-button book btn" >Book Exam</a></p>
             <p class="wills-desc">&copy; <span id="year"></span> Will's Eye Clinic. All rights reserved.</p>
             <p class="wills-address">📍New Haven, Enugu State | <a href="#">Contact Us</a></p>
         </div>
