--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
             <nav class="nav-links">
                 <a href="#about">About Us</a>
                 <a href="#services">Services</a>
-                <a href="/contactus.html" class="cta-button book">Book Exam</a>
+                <a href="/contactus" class="cta-button book">Book Exam</a>
             </nav>
         </div>
     </header>
@@ -330,9 +330,9 @@
       <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="/contactus.html" class="cta-button book" >Book Exam</a></p>
+            <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book" >Book Exam</a></p>
             <p class="wills-desc">&copy;<span id="year"></span> Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">18 Udenweze Street, New Haven, Enugu State |<a href="/contactus.html">Contact Us</a></p>
+            <p class="wills-address">18 Udenweze Street, New Haven, Enugu State |<a href="/contactus">Contact Us</a></p>
         </div>
     </footer>
 
